@@ -38,6 +38,7 @@ Vincent Penne: 2004
 Roger Cattermole: 2002
 Paul Boese: 2002
 Brian Paul: 1999, 2000, 2001
+Josh "PH3NOM" Pearson: 2013, 2014
 
 Files with Specific licenses:
 -----------------------------
